// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VersionListSection /> Should match previous snapshot using data from API 1`] = `
<DocumentFragment>
  <div
    class="accordion"
    data-accordion-component="Accordion"
  >
    <div
      class="accordion-title-style"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-:r7:"
          aria-disabled="false"
          aria-expanded="false"
          class="accordion__button"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-:r7:"
          role="button"
          tabindex="0"
        >
          <h4
            class=""
            title="New Life Version (Easy to Read)"
          >
            New Life Version (Easy to Read)
          </h4>
        </div>
      </div>
      <div
        class="accordion-body-style"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-:r7:"
      >
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<VersionListSection /> Should match previous snapshot with valid props 1`] = `
<DocumentFragment>
  <div
    class="accordion"
    data-accordion-component="Accordion"
  >
    <div
      class="accordion-title-style"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-:r0:"
          aria-disabled="false"
          aria-expanded="false"
          class="accordion__button"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-:r0:"
          role="button"
          tabindex="0"
        >
          <h4
            class=""
            title="English Standard Version"
          >
            English Standard Version
          </h4>
        </div>
      </div>
      <div
        class="accordion-body-style"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-:r0:"
      >
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </div>
    <div
      class="accordion-title-style"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-:r1:"
          aria-disabled="false"
          aria-expanded="false"
          class="accordion__button"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-:r1:"
          role="button"
          tabindex="0"
        >
          <h4
            class="active-version"
            title="New International Version"
          >
            New International Version
          </h4>
        </div>
      </div>
      <div
        class="accordion-body-style"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-:r1:"
      >
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </div>
    <div
      class="accordion-title-style"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-:r2:"
          aria-disabled="false"
          aria-expanded="false"
          class="accordion__button"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-:r2:"
          role="button"
          tabindex="0"
        >
          <h4
            class=""
            title="King James Version"
          >
            King James Version
          </h4>
        </div>
      </div>
      <div
        class="accordion-body-style"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-:r2:"
      >
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </div>
    <div
      class="accordion-title-style"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="1"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-:r3:"
          aria-disabled="false"
          aria-expanded="false"
          class="accordion__button"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-:r3:"
          role="button"
          tabindex="0"
        >
          <button
            class=" top-level-title"
            tabindex="0"
            title="New American Bible"
            type="button"
          >
            New American Bible
          </button>
        </div>
      </div>
      <div
        class="accordion__panel"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-:r3:"
      />
    </div>
    <div
      class="accordion-title-style"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="1"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-:r4:"
          aria-disabled="false"
          aria-expanded="false"
          class="accordion__button"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-:r4:"
          role="button"
          tabindex="0"
        >
          <button
            class=" top-level-title"
            tabindex="0"
            title="World English Bible"
            type="button"
          >
            World English Bible (Hosanna audio) (World English Bible)
          </button>
        </div>
      </div>
      <div
        class="accordion__panel"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-:r4:"
      />
    </div>
    <div
      class="accordion-title-style"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="1"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-:r5:"
          aria-disabled="false"
          aria-expanded="false"
          class="accordion__button"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-:r5:"
          role="button"
          tabindex="0"
        >
          <button
            class=" top-level-title"
            tabindex="0"
            title="World English Bible (Afred Henson)"
            type="button"
          >
            World English Bible (Afred Henson)
          </button>
        </div>
      </div>
      <div
        class="accordion__panel"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-:r5:"
      />
    </div>
    <div
      class="accordion-title-style"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-:r6:"
          aria-disabled="false"
          aria-expanded="false"
          class="accordion__button"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-:r6:"
          role="button"
          tabindex="0"
        >
          <h4
            class=""
            title="New International Version (Anglicised)"
          >
            New International Version (Anglicised)
          </h4>
        </div>
      </div>
      <div
        class="accordion-body-style"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-:r6:"
      >
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Dramatized Version
        </button>
        <button
          class="version-item-button"
          tabindex="0"
          type="button"
        >
          Non-Dramatized Version
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
